# Quotes_Django_deployed

./: Procfile  README.md
Quotes_Django_deployed/: pyproject.toml
Quotes_Django_deployed/project_quotes/: Dockerfile  fly.toml  pyproject.toml
Quotes_Django_deployed/project_quotes/hw10_quotes/: manage.py  migration.py
Quotes_Django_deployed/project_quotes/hw10_quotes/hw10_quotes/: asgi.py  settings.py  urls.py  wsgi.py
Quotes_Django_deployed/project_quotes/hw10_quotes/super_quotes/: apps.py  forms.py  models.py  urls.py  utils.py  views.py
Quotes_Django_deployed/project_quotes/hw10_quotes/super_quotes/migrations/: 0001_initial.py
Quotes_Django_deployed/project_quotes/hw10_quotes/super_quotes/static/super_quotes/: style.css
Quotes_Django_deployed/project_quotes/hw10_quotes/super_quotes/templates/super_quotes/: add_author.html  add_quote.html  add_tag.html  author.html  base.html  find_tag.html  index.html  parse_quotes.html  question_response.html  search_quotes.html  test.html
Quotes_Django_deployed/project_quotes/hw10_quotes/super_quotes/templatetags/: extract.py
Quotes_Django_deployed/project_quotes/hw10_quotes/users/: forms.py  urls.py  views.py
Quotes_Django_deployed/project_quotes/hw10_quotes/users/templates/users/: logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  signin.html  signup.html
Quotes_Django_deployed/project_quotes/hw10_quotes/utils/: add_quotes_to_mongo.py  authors.json  migration.py
